# rent-crm

./: .dockerignore  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 001_initial_migration.py
app/api/: __init__.py
app/api/v1/: __init__.py
app/config/: app.py  config.yaml  settings.py  setup.py
app/db/base/mixins/: base_mixins.py
app/db/base/models/: base_models.py
app/db/models/: __init__.py  bookings.py  cars.py  insurance.py  maintenance.py  organizations.py  users.py
app/repositories/: __init__.py  base.py  uow.py
app/repositories/bookings/: __init__.py  repository.py
app/repositories/cars/: __init__.py  repository.py
app/repositories/insurance/: __init__.py  repository.py
app/repositories/maintenance/: __init__.py  repository.py
app/repositories/organizations/: __init__.py  repository.py
app/repositories/users/: __init__.py  repository.py
envs/: example.env
